# adk-prac

./: .env.example  .gitignore  Makefile  pyproject.toml
docs/: naver-api.md
src/: agent.py
src/.adk/: session.db
src/adk_prac/: __init__.py  agent.py
src/adk_prac/.adk/: session.db
